feat: added typing events
